Menu: fix menu button in the mobile view (#19191)
* replace "sandwich" (menu) button with logo(back home) if kiosk=tv
* update navbar initialize padding-left befause menu button is overlapped by the navbar
(cherry picked from commit 5ef40b259d18d0d5d3c3ce67ac5cc97c539ac243)

--- a/public/sass/components/_navbar.scss
+++ b/public/sass/components/_navbar.scss
@@ -2,7 +2,7 @@
   position: relative;
   z-index: $zindex-navbar-fixed;
   height: $navbarHeight;
-  padding: 0 20px 0 50px;
+  padding: 0 20px 0 60px;
   display: flex;
   flex-grow: 1;
   border-bottom: 1px solid transparent;
@@ -44,7 +44,8 @@
   }
 }
 
-.panel-in-fullscreen {
+.panel-in-fullscreen,
+.panel-in-fullscreen.view-mode--tv {
   .navbar {
     padding-left: $navbar-padding;
   }
